# tc-rrf

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt  tc-rrf.sublime-project
SuperSlicer_profiles/: ilo_config_bundle.ini  ilo_config_bundle_prusa_slicer.ini
resources/: ilo-tc.yaml
resources/templates/rrf3.x/__macros__/: axes.jinja  babystep.jinja  bed.jinja  errors.jinja  heat.jinja  move.jinja  speeds.jinja  tools.jinja  util.jinja
resources/templates/rrf3.x/__templates__/: avoid_tc_clash.jinja  brushX.jinja  home_brush.jinja  stack_tool.jinja  tfreeX.jinja  tpostX.jinja  tpreX.jinja
resources/templates/rrf3.x/gcodes/: min_bug_fn.gcode
resources/templates/rrf3.x/macros/: Coupler - Lock  Coupler - Unlock  Enable Logging  Go To Purge Spot  Jiggle  Move to Middle  brush  test
resources/templates/rrf3.x/macros/maintenance/: Calculate Z offset correction  Enable Logging  Offset adjustment start  Quick Level  Set Real Z offset
resources/templates/rrf3.x/macros/maintenance/XY offsets/: 01. Prepare  02. Set real XY Coords  03. Move the tool to the point  04. Calculate XY offsets
resources/templates/rrf3.x/macros/maintenance/Z offset - Camera/: 01. Save XYZ position  02. Go to XYZ  03. Calculate Z update
resources/templates/rrf3.x/macros/tests/: Cycle Tools
resources/templates/rrf3.x/sys/: bed.g  config.g  daemon.g  homeall.g  homec.g  homex.g  homey.g  homez.g  pause.g  resume.g  start.g  stop.g  tfree0.g  tfree1.g  tfree2.g  tfree3.g  tpost0.g  tpost1.g  tpost2.g  tpost3.g  tpre0.g  tpre1.g  tpre2.g  tpre3.g
resources/templates/rrf3.x/sys/usr/: brush.g  configure_tool.g  global_vars.g  maybe_brush.g  pre_dock.g  prime.g  reset_tool_offsets.g
slicer_profiles/: ilo_config_bundle_prusa_slicer.ini  ilo_config_bundle_super_slicer.ini
src/duetwebapi/: dwa_factory.py
src/duetwebapi/api/: base.py  dsf_api.py  dwc_api.py  wrapper.py
src/rrf_gcode_parser/: __init__.py  gcode.py  gcode_commands.py  parser.py  tokeniser.py
src/tc_cv/: __init__.py  __main__.py  coord_inference.py  math.py  motion_tracker.py  object_tracker.py  typ.py  vcap_source.py  xy_config.py  z_config.py
src/tc_cv/toolchanger/: __init__.py  gcode.py  toolchanger.py
src/tc_cv/trackers/: __init__.py  hough_object_tracker.py  motion_tracker.py  object_tracker.py  optical_flow_tracker.py
src/tc_gcode/: __init__.py  __main__.py  convert.py  duration.py  toolchanges.py  typ.py
src/tc_rrf/: __init__.py  __main__.py  render.py  upload.py
src/tc_rrf/lib/: yaml.py
test/rrf_gcode_parser/: test_gcode.py  test_parser.py  test_tokeniser.py
test/tc_cv/: conftest.py  test_math.py  test_typ.py
test/tc_cv/toolchanger/: conftest.py  test_coord_inference.py  test_gcode.py  test_toolchanger.py
test/tc_cv/toolchanger/resources/: coords.json  move_axes.json  state.json  tools.json
test/tc_gcode/integration/: test_tc_gcode_integration.py
(+16 files in other folders)
