[tool.poetry]
name = "tc-rrf"
version = "0.0.0dev0"
description = ""
authors = ["Ilja Orlovs"]
license = "MIT"
readme = "README.md"
packages = [{include = "tc_rrf", from="src"}]

[tool.poetry.dependencies]
python = "~=3.11.0"
duetwebapi = "^1.2.2"
jinja2 = "^3.1.2"
pyyaml = "^6.0.1"
mergedeep = "^1.3.4"
typer = "^0.9.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.280"

[tool.poetry.scripts]
tc-rrf = 'tc_rrf.__main__:cli_app'


[tool.ruff]
target-version = "py38"
select = [
    # https://beta.ruff.rs/docs/rules/
    "A", # do not shadow bultins - TODO
    "B",  # flake8-bugbear
    "C",
    "E",
    "F",
    "I",  # isort
    "W",  # pycodestyle
    "N",  # pep8 naming
    "C4", # list comprehensions
    "T20", # print()
    "PTH", # use-pathlib - todo
]
ignore = ["N802", "F841"]
line-length = 120

[tool.ruff.per-file-ignores]
"__init__.py" = [
    # imported but unused
    "F401",
    # E402 Module level import not at top of file
    "E402",
]


[tool.ruff.isort]
order-by-type = true
known-first-party = ["tc_rrf", ]
forced-separate = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
